observabilidade/jaeger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observabilidade
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: observabilidade
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        ports:
        - containerPort: 16686 # Interface Web
        - containerPort: 4318  # Porta que receberá os traces (OTLP)
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: observabilidade
spec:
  selector:
    app: jaeger
  ports:
    - name: ui
      port: 16686
      targetPort: 16686
    - name: otlp
      port: 4318
      targetPort: 4318
